<resources>
    <string name="app_name">NextDNS Console</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_login">Login</string>
    <string name="menu_setup">Setup</string>
    <string name="menu_security">Security</string>
    <string name="menu_privacy">Privacy</string>
    <string name="menu_parental_control">Parental Control</string>
    <string name="menu_blacklist">Blacklist</string>
    <string name="menu_whitelist">Whitelist</string>
    <string name="menu_analytics">Analytics</string>
    <string name="menu_logs">Logs</string>
    <string name="menu_settings">Settings</string>

    <!-- Common -->
    <string name="label_button_add">Add</string>

    <!-- Login -->
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Log In</string>
    <string name="login_registration_nudge">To register, visit nextdns.io</string>

    <!-- Setup -->
    <string name="label_endpoints">Endpoints</string>
    <string name="label_endpoints_subtitle">Set up NextDNS with this configuration using one of the endpoints below.</string>
    <string name="label_id">ID</string>
    <string name="label_dns_over_tls">DNS-over-TLS</string>
    <string name="label_dns_over_https">DNS-over-HTTPS</string>
    <string name="label_ipv6">IPv6</string>
    <string name="dns_over_tls">%1s.dns.nextdns.io</string>
    <string name="dns_over_https">https://dns.nextdns.io/%1s</string>

    <string name="label_linked_ip">Linked IP</string>
    <string name="label_linked_ip_subtitle">If you are unable to set up NextDNS using our apps, DNS-over-TLS, DNS-over-HTTPS or IPv6, then use the DNS servers below and link your IP. This is mostly for use on home networks and not recommended on mobile.</string>
    <string name="label_dns_servers">DNS Servers</string>
    <string name="label_ddns">Dynamic DNS (DDNS)</string>

    <!-- Security -->
    <string name="label_threat_intelligence_feeds">Threat Intelligence Feeds</string>
    <string name="label_threat_intelligence_feeds_subtitle">Block domains known to distribute malware or launch phishing attacks and botnet command-and-control servers using a blend of the most reputable threat intelligence feeds—all updated in real-time.</string>
    <string name="label_use_threat_intelligence_feeds">Use Threat Intelligence Feeds</string>

    <string name="label_google_safe_browsing">Google Safe Browsing</string>
    <string name="label_google_safe_browsing_subtitle">Block malware and phishing domains using Google Safe Browsing—a technology that examines billions of URLs per day looking for unsafe websites. Unlike the version embedded in some browsers, this does not associate your public IP address to threats and does not allow bypassing the block.</string>
    <string name="label_enable_google_safe_browsing">Enable Google Safe Browsing</string>

    <string name="label_cryptojacking_protection">Cryptojacking Protection</string>
    <string name="label_cryptojacking_protection_subtitle">Prevent the unauthorized use of your devices to mine cryptocurrency.</string>
    <string name="label_enable_cryptojacking_protection">Enable Cryptojacking Protection</string>

    <string name="label_dns_rebinding_protection">DNS Rebinding Protection</string>
    <string name="label_dns_rebinding_protection_subtitle">Prevent attackers from taking control of your local devices through the Internet by automatically blocking DNS responses containing private IP addresses.</string>
    <string name="label_enable_dns_rebinding_protection">Enable DNS Rebinding Protection</string>

    <string name="label_idn_homograph_attacks_protection">IDN Homograph Attacks Protection</string>
    <string name="label_idn_homograph_attacks_protection_subtitle">Block domains that impersonate other domains by abusing the large character set made available with the arrival of Internationalized Domain Names (IDNs)—e.g. replacing the Latin letter "e" with the Cyrillic letter "е".</string>
    <string name="label_enable_idn_homograph_attacks_protection">Enable IDN Homograph Attacks Protection</string>

    <string name="label_typosquatting_protection">Typosquatting Protection</string>
    <string name="label_typosquatting_protection_subtitle">Block domains registered by malicious actors that target users who incorrectly type a website address into their browser (e.g. gooogle.com instead of google.com).</string>
    <string name="label_enable_typosquatting_protection">Enable Typosquatting Protection</string>

    <string name="label_dga_protection">Domain Generation Algorithms (DGAs) Protection</string>
    <string name="label_dga_protection_subtitle">Block domains generated by Domain Generation Algorithms (DGAs) seen in various families of malware that can be used as rendezvous points with their command and control servers.</string>
    <string name="label_enable_dga_protection">Enable DGA Protection</string>

    <string name="label_block_nrds">Block Newly Registered Domains (NRDs)</string>
    <string name="label_block_nrds_subtitle">Block domains registered less than 30 days ago. Those domains are known to be favored by threat actors to launch malicious campaigns.</string>

    <string name="label_block_parked_domains">Block Parked Domains</string>
    <string name="label_block_parked_domains_subtitle">Parked domains are single-page websites often laden with ads and devoid of any value. Parked domain monetization can sometimes get mixed up with suspicious practices and malicious content.</string>

    <string name="label_block_tlds">Block Top-Level Domains (TLDs)</string>
    <string name="label_block_tlds_subtitle">Block all domains and subdomains belonging to specific TLDs.</string>
    <string name="label_add_a_tld">Add a TLD</string>

    <string name="label_block_csam">Block Child Sexual Abuse Material</string>
    <string name="label_block_csam_subtitle">Block domains hosting child sexual abuse material with the help of Project Arachnid, operated by the Canadian Centre for Child Protection</string>
    <string name="label_block_csam_subtitle2">No information is transmitted back to Project Arachnid when a domain is blocked.</string>

    <!-- Privacy -->
    <string name="label_blocklists">Blocklists</string>
    <string name="label_blocklists_subtitle">Block ads &amp; trackers using the most popular blocklists available—all updated in real-time.</string>
    <string name="label_add_a_blocklist">Add a Blocklist</string>

    <string name="label_native_tracking_protection">Native Tracking Protection</string>
    <string name="label_native_tracking_protection_subtitle">Block wide spectrum trackers—often operating at the operating system level—that track your activity on a device. This could include all the websites you visit, everything you type or your location at all times.</string>

    <string name="label_block_disguised_third_party_trackers">Block Disguised Third-Party Trackers</string>
    <string name="label_block_disguised_third_party_trackers_subtitle">Automatically detect and block third-party trackers disguising themselves as first-party to circumvent recent browser\'s privacy protections like ITP.</string>

    <string name="label_allow_affiliate_and_tracking_links">Allow Affiliate &amp; Tracking Links</string>
    <string name="label_allow_affiliate_and_tracking_links_subtitle">Allow affiliate &amp; tracking domains common on deals websites, in emails or in search results. Those usually only get called after manually clicking on a link.</string>
</resources>
