<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">
    <fragment
        android:id="@+id/nav_login"
        android:name="sh.van.nextdnsconsole.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_setup"
        android:name="sh.van.nextdnsconsole.ui.SetupFragment"
        android:label="@string/menu_setup" />
    <fragment
        android:id="@+id/nav_security"
        android:name="sh.van.nextdnsconsole.ui.SecurityFragment"
        android:label="@string/menu_security" />
    <fragment
        android:id="@+id/nav_privacy"
        android:name="sh.van.nextdnsconsole.ui.PrivacyFragment"
        android:label="@string/menu_privacy" />
    <fragment
        android:id="@+id/nav_parental_control"
        android:name="sh.van.nextdnsconsole.ui.ParentalControlFragment"
        android:label="@string/menu_parental_control" />
    <fragment
        android:id="@+id/nav_blacklist"
        android:name="sh.van.nextdnsconsole.ui.BlacklistFragment"
        android:label="@string/menu_blacklist" />
    <fragment
        android:id="@+id/nav_whitelist"
        android:name="sh.van.nextdnsconsole.ui.WhitelistFragment"
        android:label="@string/menu_whitelist" />
    <fragment
        android:id="@+id/nav_analytics"
        android:name="sh.van.nextdnsconsole.ui.AnalyticsFragment"
        android:label="@string/menu_analytics" />
    <fragment
        android:id="@+id/nav_logs"
        android:name="sh.van.nextdnsconsole.ui.LogsFragment"
        android:label="@string/menu_logs" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="sh.van.nextdnsconsole.ui.SettingsFragment"
        android:label="@string/menu_settings" />
</navigation>
