<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setup"
            android:icon="@drawable/ic_menu_setup"
            android:title="@string/menu_setup" />
        <item
            android:id="@+id/nav_security"
            android:icon="@drawable/ic_menu_security"
            android:title="@string/menu_security" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_menu_privacy"
            android:title="@string/menu_privacy" />
        <item
            android:id="@+id/nav_parental_control"
            android:icon="@drawable/ic_menu_parental_control"
            android:title="@string/menu_parental_control" />
        <item
            android:id="@+id/nav_blacklist"
            android:icon="@drawable/ic_menu_blacklist"
            android:title="@string/menu_blacklist" />
        <item
            android:id="@+id/nav_whitelist"
            android:icon="@drawable/ic_menu_whitelist"
            android:title="@string/menu_whitelist" />
        <item
            android:id="@+id/nav_analytics"
            android:icon="@drawable/ic_menu_analytics"
            android:title="@string/menu_analytics" />
        <item
            android:id="@+id/nav_logs"
            android:icon="@drawable/ic_menu_logs"
            android:title="@string/menu_logs" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>
