<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setup.SetupFragment">

    <TextView
        android:id="@+id/label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_id"
        android:textAlignment="center"
        android:textAppearance="@style/LabelTextViewStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/label_dns_tls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_dns_over_tls"
        android:textAppearance="@style/LabelTextViewStyle"
        app:layout_constraintStart_toStartOf="@+id/label_id"
        app:layout_constraintTop_toBottomOf="@+id/label_id" />

    <TextView
        android:id="@+id/label_dns_https"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_dns_over_https"
        android:textAppearance="@style/LabelTextViewStyle"
        app:layout_constraintStart_toStartOf="@+id/label_dns_tls"
        app:layout_constraintTop_toBottomOf="@+id/label_dns_tls" />

    <TextView
        android:id="@+id/label_ipv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_ipv6"
        android:textAppearance="@style/LabelTextViewStyle"
        app:layout_constraintStart_toStartOf="@+id/label_dns_https"
        app:layout_constraintTop_toBottomOf="@+id/label_dns_https" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/label_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="13d18c" />
</androidx.constraintlayout.widget.ConstraintLayout>
